--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "babel-preset-es2015": "^6.0.15",
     "node-libs-browser": "^0.5.3",
     "webpack": "^1.12.2"
+  },
+  "dependencies": {
+    "es6-promise": "^3.2.1",
+    "whatwg-fetch": "^1.0.0"
   }
 }
