--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "es6-promise": "^3.2.1",
+    "json-loader": "^0.5.4",
+    "jsonschema": "^1.1.0",
     "whatwg-fetch": "^1.0.0"
   }
 }
