--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "babel-core": "^6.0.20",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
+    "chai": "^3.5.0",
+    "mocha": "^3.0.2",
     "node-libs-browser": "^0.5.3",
     "webpack": "^1.12.2"
   },
