--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "build": "NODE_ENV=production webpack"
   },
   "devDependencies": {
     "babel-core": "^6.0.20",
