--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "watch": "webpack --watch",
-    "build": "NODE_ENV=production webpack"
+    "build": "webpack",
+    "build:production": "NODE_ENV=production webpack"
   },
   "devDependencies": {
     "babel-core": "^6.0.20",
