--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "watch": "webpack --watch",
     "build": "webpack",
-    "build:production": "NODE_ENV=production webpack"
+    "build:production": "NODE_ENV=production webpack",
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "devDependencies": {
     "babel-core": "^6.0.20",
