--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "build:production": "NODE_ENV=production webpack",
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "./node_modules/karma/bin/karma start --log-level debug"
   },
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "chai": "^3.5.0",
+    "karma": "^1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.1.1",
+    "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
     "node-libs-browser": "^0.5.3",
-    "webpack": "^1.12.2"
+    "webpack": "^1.13.2"
   },
   "dependencies": {
     "es6-promise": "^3.2.1",
