--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "build:production": "NODE_ENV=production webpack",
-    "test": "./node_modules/karma/bin/karma start --log-level debug --single-run"
+    "test": "./node_modules/karma/bin/karma start --log-level debug --single-run",
+    "build:docs": "npm run build:docs:markdown && npm run build:docs:json && npm run build:docs:html",
+    "build:docs:markdown": "documentation build src/squatch.js -f md > docs/docs.md",
+    "build:docs:json": "documentation build src/squatch.js -f json > docs/docs.json",
+    "build:docs:html": "documentation build src/squatch.js -f html -o docs",
+    "serve:docs": "documentation serve src/squatch.js --port $PORT --watch",
+    "lint:docs": "documentation lint src && eslint"
   },
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "chai": "^3.5.0",
+    "documentation": "^4.0.0-beta10",
+    "eslint": "^3.5.0",
     "karma": "^1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
