--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "chai": "^3.5.0",
+    "css-loader": "^0.25.0",
     "documentation": "^4.0.0-beta10",
     "eslint": "^3.5.0",
     "karma": "^1.2.0",
@@ -28,6 +29,7 @@
     "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
     "node-libs-browser": "^0.5.3",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   },
   "dependencies": {}
