--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "build:production": "NODE_ENV=production webpack",
     "test": "mocha && karma start --log-level debug --single-run",
     "build:docs": "npm run build:docs:markdown && npm run build:docs:json && npm run build:docs:html",
-    "build:docs:markdown": "documentation build src/squatch.js -f md > docs/docs.md",
-    "build:docs:json": "documentation build src/squatch.js -f json > docs/docs.json",
-    "build:docs:html": "documentation build src/squatch.js -f html -o docs",
-    "serve:docs": "documentation serve src/squatch.js --port $PORT --watch",
+    "build:docs:markdown": "documentation build src/index.js -f md > docs/docs.md",
+    "build:docs:json": "documentation build src/index.js -f json > docs/docs.json",
+    "build:docs:html": "documentation build src/index.js -f html -o docs",
+    "serve:docs": "documentation serve src/index.js --port $PORT --watch",
     "lint:docs": "documentation lint src && eslint"
   },
   "devDependencies": {
