--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack": "^1.13.2"
   },
   "dependencies": {
+    "element-resize-detector": "^1.1.8",
     "es6-promise": "^3.2.1",
     "json-loader": "^0.5.4",
     "jsonschema": "^1.1.0",
