--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "es6-promise": "^3.2.1",
     "json-loader": "^0.5.4",
     "jsonschema": "^1.1.0",
+    "store": "^1.3.20",
     "whatwg-fetch": "^1.0.0"
   }
 }
