--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "squatch-js",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
   "scripts": {
     "watch": "webpack --watch",
@@ -11,6 +11,7 @@
     "build:docs:markdown": "documentation build src/squatch.js -f md > docs/docs.md",
     "build:docs:json": "documentation build src/squatch.js -f json > docs/docs.json",
     "build:docs:html": "documentation build src/squatch.js -f html -o docs",
+    "preversion": "npm run build:docs",
     "serve:docs": "documentation serve src/squatch.js --port $PORT --watch",
     "lint:docs": "documentation lint src && eslint"
   },
