--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "babel-preset-es2015": "^6.0.15",
     "chai": "^3.5.0",
     "documentation": "^4.0.0-beta10",
-    "eslint": "^3.5.0",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "^1.16.0",
     "karma": "^1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
