--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
-  "name": "squatch-js",
-  "version": "2.0.0",
+  "name": "@saasquatch/squatch-js",
+  "version": "2.0.0-alpha",
   "description": "",
+  "license" : "MIT",
+  "main": "dist/squatch.js",
+  "browser": "src/squatch.js",
+  "bugs": {
+    "url": "https://github.com/saasquatch/squatch-js/issues",
+    "email": "support@referralsaasquatch.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/saasquatch/squatch-js.git"
+  },
   "scripts": {
     "watch": "webpack --watch",
     "build": "webpack",
@@ -11,7 +22,8 @@
     "build:docs:markdown": "documentation build src/squatch.js -f md > docs/docs.md",
     "build:docs:json": "documentation build src/squatch.js -f json > docs/docs.json",
     "build:docs:html": "documentation build src/squatch.js -f html -o docs",
-    "preversion": "npm run build:docs",
+    "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
+    "preversion": "npm run build && npm run build:production && npm run build:docs",
     "serve:docs": "documentation serve src/squatch.js --port $PORT --watch",
     "lint:docs": "documentation lint src && eslint",
     "eslint:src": "eslint src/api src/widgets src/squatch.js"
