--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saasquatch/squatch-js",
-  "version": "2.0.0-alpha",
+  "version": "2.0.0-alpha.0",
   "description": "",
   "license": "MIT",
   "main": "dist/squatch.js",
