--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@saasquatch/squatch-js",
   "version": "2.0.0-alpha.1",
-  "description": "",
+  "description": "`The official Referral SaaSquatch Javascript Web/Browser SDK https://docs.referralsaasquatch.com/developer/squatchjs/",
   "license": "MIT",
   "main": "dist/squatch.js",
   "browser": "dist/squatch.js",
