--- a/package.json
+++ b/package.json
@@ -53,11 +53,12 @@
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "element-resize-detector": "^1.1.8",
     "es6-promise": "^3.2.1",
     "eventbusjs": "^0.1.0",
     "json-loader": "^0.5.4",
     "jsonschema": "^1.1.0",
+    "resize-detector": "^0.1.7",
+    "resize-observer-polyfill": "^1.5.0",
     "string.prototype.includes": "^1.0.0",
     "superagent": "^2.3.0"
   }
