--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "type": "git",
     "url": "https://github.com/saasquatch/squatch-js.git"
   },
+  "sideEffects": false,
   "scripts": {
     "watch": "webpack --watch",
     "build": "webpack",
-    "build:production": "NODE_ENV=production webpack",
+    "build:production": "cross-env NODE_ENV=production webpack",
     "test": "npm run test:karma && npm run lint:docs && npm run eslint:src",
     "test:karma": "./node_modules/karma/bin/karma start --single-run",
     "test:watch": "./node_modules/karma/bin/karma start --auto-watch ",
@@ -33,14 +34,17 @@
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-loader": "^6.0.1",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-es2015": "^6.0.15",
     "chai": "^3.5.0",
+    "cross-env": "^5.2.0",
     "documentation": "^4.0.0-beta10",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
+    "json-loader": "^0.5.7",
     "karma": "^1.2.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
@@ -49,14 +53,14 @@
     "karma-webpack": "^1.8.0",
     "mocha": "^3.0.2",
     "node-libs-browser": "^0.5.3",
-    "webpack": "^1.13.2"
+    "webpack": "^2.7.0",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "es6-promise": "^3.2.1",
     "eventbusjs": "^0.1.0",
-    "json-loader": "^0.5.4",
     "jsonschema": "^1.1.0",
+    "promise-polyfill": "^8.1.0",
     "resize-observer-polyfill": "^1.5.0",
     "string.prototype.includes": "^1.0.0",
     "superagent": "^2.3.0"
