--- a/package.json
+++ b/package.json
@@ -18,42 +18,50 @@
     "watch": "webpack --watch",
     "build": "webpack",
     "build:production": "cross-env NODE_ENV=production webpack",
-    "test": "npm run test:karma && npm run lint:docs && npm run eslint:src",
-    "test:karma": "./node_modules/karma/bin/karma start --single-run",
-    "test:watch": "./node_modules/karma/bin/karma start --auto-watch ",
-    "build:docs": "npm run build:docs:markdown && npm run build:docs:json && npm run build:docs:html",
+    "test": "run-p test:karma lint:docs",
+    "test:karma": "karmatic './test/apiTest.js'",
+    "test:watch": "karma start --auto-watch ",
+    "build:docs": "run-s build:docs:markdown build:docs:json build:docs:html",
     "build:docs:markdown": "documentation build src/squatch.js -f md > docs/docs.md",
     "build:docs:json": "documentation build src/squatch.js -f json > docs/docs.json",
     "build:docs:html": "documentation build src/squatch.js -f html -o docs",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
-    "preversion": "npm run build && npm run build:production && npm run build:docs",
+    "preversion": "run-s build build:production build:docs",
     "serve:docs": "documentation serve src/squatch.js --port $PORT --watch",
     "lint:docs": "documentation lint src",
-    "eslint:src": "eslint src/api src/widgets src/squatch.js"
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
+    "@storybook/html": "^4.0.0-alpha.14",
+    "@types/debug": "0.0.30",
+    "@types/promise-polyfill": "^6.0.0",
+    "@types/superagent": "^3.8.3",
     "babel-core": "^6.0.20",
     "babel-loader": "^6.0.1",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-es2015": "^6.0.15",
+    "babel-runtime": "^6.26.0",
     "chai": "^3.5.0",
     "cross-env": "^5.2.0",
     "documentation": "^4.0.0-beta10",
-    "eslint": "^3.9.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.6.0",
+    "docz": "^0.10.3",
     "json-loader": "^0.5.7",
-    "karma": "^1.2.0",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.1.1",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack": "^1.8.0",
+    "karmatic": "^1.2.0",
     "mocha": "^3.0.2",
     "node-libs-browser": "^0.5.3",
-    "webpack": "^2.7.0",
+    "npm-run-all": "^4.1.3",
+    "superagent": "^3.8.3",
+    "ts-loader": "^4.5.0",
+    "typescript": "^3.0.1",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
@@ -62,7 +70,6 @@
     "jsonschema": "^1.1.0",
     "promise-polyfill": "^8.1.0",
     "resize-observer-polyfill": "^1.5.0",
-    "string.prototype.includes": "^1.0.0",
-    "superagent": "^2.3.0"
+    "string.prototype.includes": "^1.0.0"
   }
 }
