--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -1,15 +1,13 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceMap": false,
+    "outDir": "demo/dist",
+    "sourceMap": true,
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
     "module": "commonjs",
     "target": "es5",
     "allowJs": true,
-    "lib": ["dom", "es5", "scripthost", "es2015"]
-  },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+    "jsx": "react"
+  }
 }
