--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
   },
   "sideEffects": false,
   "scripts": {
-    "watch": "webpack --watch",
+    "watch": "cross-env NODE_ENV=production webpack --watch",
     "build": "webpack",
     "build:production": "cross-env NODE_ENV=production webpack",
-    "test": "run-p test:karma lint:docs",
-    "test:karma": "karmatic './test/apiTest.js'",
-    "test:watch": "karma start --auto-watch ",
+    "test": "run-p intern lint:docs",
     "build:docs": "run-s build:docs:markdown build:docs:json build:docs:html",
     "build:docs:markdown": "documentation build src/squatch.js -f md > docs/docs.md",
     "build:docs:json": "documentation build src/squatch.js -f json > docs/docs.json",
@@ -29,13 +27,16 @@
     "preversion": "run-s build build:production build:docs",
     "serve:docs": "documentation serve src/squatch.js --port $PORT --watch",
     "lint:docs": "documentation lint src",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "demo": "run-p static parcel",
+    "static": "serve dist",
+    "parcel": "cd demo && parcel index.html",
+    "intern": "intern"
   },
   "devDependencies": {
-    "@storybook/html": "^4.0.0-alpha.14",
     "@types/debug": "0.0.30",
+    "@types/es6-promise": "^3.3.0",
     "@types/promise-polyfill": "^6.0.0",
+    "@types/react": "^16.4.11",
     "@types/superagent": "^3.8.3",
     "babel-core": "^6.0.20",
     "babel-loader": "^6.0.1",
@@ -45,20 +46,19 @@
     "chai": "^3.5.0",
     "cross-env": "^5.2.0",
     "documentation": "^4.0.0-beta10",
-    "docz": "^0.10.3",
+    "es6-promise": "^4.2.4",
+    "intern": "^4.2.3",
     "json-loader": "^0.5.7",
-    "karma": "^3.0.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-mocha": "^1.1.1",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-webpack": "^1.8.0",
-    "karmatic": "^1.2.0",
     "mocha": "^3.0.2",
     "node-libs-browser": "^0.5.3",
     "npm-run-all": "^4.1.3",
+    "parcel-bundler": "^1.9.7",
+    "react-bootstrap": "^0.32.3",
+    "react-url-query": "^1.4.0",
+    "serve": "^10.0.0",
     "superagent": "^3.8.3",
     "ts-loader": "^4.5.0",
+    "ts-node": "^7.0.1",
     "typescript": "^3.0.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
