--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -8,6 +8,7 @@
     "module": "commonjs",
     "target": "es5",
     "allowJs": true,
-    "jsx": "react"
+    "jsx": "react",
+    "lib": ["es2015", "dom", "es5", "scripthost"]
   }
 }
