--- a/package.json
+++ b/package.json
@@ -18,22 +18,16 @@
     "watch": "cross-env NODE_ENV=production webpack --watch",
     "build": "webpack",
     "build:production": "cross-env NODE_ENV=production webpack",
-    "test": "run-p intern lint:docs",
-    "build:docs": "run-s build:docs:markdown build:docs:json build:docs:html",
-    "build:docs:markdown": "documentation build src/squatch.js -f md > docs/docs.md",
-    "build:docs:json": "documentation build src/squatch.js -f json > docs/docs.json",
-    "build:docs:html": "documentation build src/squatch.js -f html -o docs",
+    "test": "echo \"No tests defined\"",
+    "build:docs": "typedoc --out docs/ src/ ",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
     "preversion": "run-s build build:production build:docs",
-    "serve:docs": "documentation serve src/squatch.js --port $PORT --watch",
-    "lint:docs": "documentation lint src",
     "demo": "run-p static parcel",
     "demo:deploy": "run-s parcel:build parcel:deploy",
     "static": "serve dist",
     "parcel": "cd demo && parcel index.html",
     "parcel:build": "cd demo && parcel build index.html",
     "parcel:deploy": "surge demo/dist -d squathjs-demo.surge.sh",
-    "intern": "intern"
   },
   "devDependencies": {
     "@types/debug": "0.0.30",
@@ -48,7 +42,6 @@
     "babel-runtime": "^6.26.0",
     "chai": "^3.5.0",
     "cross-env": "^5.2.0",
-    "documentation": "^4.0.0-beta10",
     "es6-promise": "^4.2.4",
     "intern": "^4.2.3",
     "json-loader": "^0.5.7",
@@ -62,6 +55,7 @@
     "superagent": "^3.8.3",
     "ts-loader": "^4.5.0",
     "ts-node": "^7.0.1",
+    "typedoc": "^0.12.0",
     "typescript": "^3.0.1",
     "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
