--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
+    "outDir": "./",
     "sourceMap": false,
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
     "module": "commonjs",
     "target": "es5",
-    "allowJs": true,
     "lib": ["dom", "es5", "scripthost", "es2015"]
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts"],
+  "typedocOptions":{
+    "out": "docs",
+    "json": "docs/docs.json",
+    "excludePrivate": true,
+    "excludeProtected": true
+  }
 }
