--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build:production": "cross-env NODE_ENV=production webpack",
     "test": "echo \"No tests defined\"",
     "build:docs": "typedoc --out docs/ src/ ",
+    "deploy": "np",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
     "preversion": "run-s build build:production build:docs",
     "demo": "run-p static parcel",
@@ -46,6 +47,7 @@
     "json-loader": "^0.5.7",
     "mocha": "^3.0.2",
     "node-libs-browser": "^0.5.3",
+    "np": "^3.0.4",
     "npm-run-all": "^4.1.3",
     "parcel-bundler": "^1.9.7",
     "react-bootstrap": "^0.32.3",
