--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@types/react": "^16.4.11",
     "@types/superagent": "^3.8.3",
     "babel-core": "^6.0.20",
-    "babel-loader": "^6.0.1",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-es2015": "^6.0.15",
     "babel-runtime": "^6.26.0",
@@ -50,6 +49,7 @@
     "np": "^3.0.4",
     "npm-run-all": "^4.1.3",
     "parcel-bundler": "^1.9.7",
+    "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
     "react-url-query": "^1.4.0",
     "serve": "^10.0.0",
