--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "parcel-bundler": "^1.9.7",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
+    "react-dom": "^16.4.2",
     "react-url-query": "^1.4.0",
     "serve": "^10.0.0",
     "superagent": "^3.8.3",
