--- a/package.json
+++ b/package.json
@@ -37,20 +37,10 @@
     "@babel/preset-typescript": "^7.0.0",
     "@babel/runtime-corejs2": "^7.0.0",
     "@types/debug": "0.0.30",
-    "@types/es6-promise": "^3.3.0",
-    "@types/promise-polyfill": "^6.0.0",
     "@types/react": "^16.4.11",
     "@types/superagent": "^3.8.3",
-    "babel-core": "^6.0.20",
     "babel-loader": "^8.0.0",
-    "babel-minify-webpack-plugin": "^0.3.1",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-runtime": "^6.26.0",
-    "chai": "^3.5.0",
     "cross-env": "^5.2.0",
-    "es6-promise": "^4.2.4",
-    "json-loader": "^0.5.7",
-    "mocha": "^3.0.2",
     "node-libs-browser": "^0.5.3",
     "np": "^3.0.4",
     "npm-run-all": "^4.1.3",
@@ -60,7 +50,6 @@
     "react-dom": "^16.4.2",
     "react-url-query": "^1.4.0",
     "serve": "^10.0.0",
-    "superagent": "^3.8.3",
     "ts-loader": "^4.5.0",
     "ts-node": "^7.0.1",
     "typedoc": "^0.12.0",
@@ -70,11 +59,8 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0",
     "debug": "^2.2.0",
     "eventbusjs": "^0.1.0",
-    "jsonschema": "^1.1.0",
-    "promise-polyfill": "^8.1.0",
-    "string.prototype.includes": "^1.0.0"
+    "superagent": "^3.8.3"
   }
 }
