--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
-    "module": "commonjs",
-    "target": "es5",
+    "module": "es6",
+    "target": "es6",
     "lib": ["dom", "es5", "scripthost", "es2015"]
   },
   "include": ["src/**/*.ts"],
