--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build:docs": "typedoc --out docs/ src/ ",
     "deploy": "np --no-cleanup",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
-    "preversion": "run-s build build:production build:docs",
+    "preversion": "run-s build build:production",
     "demo": "run-p static parcel",
     "demo:deploy": "run-s parcel:build parcel:deploy",
     "static": "serve dist",
