--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "url": "https://github.com/saasquatch/squatch-js/issues",
     "email": "support@referralsaasquatch.com"
   },
+  "engines": {
+    "node": ">=12.16.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/saasquatch/squatch-js.git"
@@ -31,36 +34,36 @@
     "parcel:deploy": "surge demo/dist -d squathjs-demo.surge.sh"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-typescript": "^7.0.0",
-    "@babel/runtime-corejs2": "^7.0.0",
-    "@types/debug": "0.0.30",
-    "@types/react": "^16.4.11",
-    "@types/superagent": "^3.8.3",
-    "babel-loader": "^8.0.0",
-    "cross-env": "^5.2.0",
-    "node-libs-browser": "^0.5.3",
-    "np": "^3.0.4",
-    "npm-run-all": "^4.1.3",
-    "parcel-bundler": "^1.9.7",
-    "react": "^16.4.2",
-    "react-bootstrap": "^0.32.3",
-    "react-dom": "^16.4.2",
-    "react-url-query": "^1.4.0",
-    "serve": "^10.0.0",
-    "ts-loader": "^4.5.0",
-    "ts-node": "^7.0.1",
-    "typedoc": "^0.12.0",
-    "typescript": "^3.0.1",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-transform-runtime": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0",
+    "@babel/runtime-corejs2": "^7.9.6",
+    "@types/debug": "4.1.5",
+    "@types/react": "^16.9.35",
+    "@types/superagent": "^4.1.7",
+    "babel-loader": "^8.1.0",
+    "cross-env": "^7.0.2",
+    "node-libs-browser": "^2.2.1",
+    "np": "^6.2.3",
+    "npm-run-all": "^4.1.5",
+    "parcel-bundler": "^1.12.4",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
+    "react-url-query": "^1.5.0",
+    "serve": "^11.3.0",
+    "ts-loader": "^7.0.4",
+    "ts-node": "^8.10.1",
+    "typedoc": "^0.17.7",
+    "typescript": "^3.9.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
-    "debug": "^2.2.0",
-    "eventbusjs": "^0.1.0",
-    "superagent": "^3.8.3"
+    "debug": "^4.1.1",
+    "eventbusjs": "^0.2.0",
+    "superagent": "^5.2.2"
   }
 }
