--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "watch": "cross-env NODE_ENV=production webpack --watch",
     "build": "webpack",
     "build:production": "cross-env NODE_ENV=production webpack",
-    "test": "echo \"No tests defined\"",
+    "test": "cucumber-js",
     "build:docs": "typedoc --out docs/ src/ ",
     "deploy": "np --no-cleanup",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
@@ -35,15 +35,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
+    "@babel/register": "^7.10.1",
     "@babel/runtime-corejs2": "^7.9.6",
+    "@types/chai": "^4.2.11",
+    "@types/cucumber": "^6.0.1",
     "@types/debug": "4.1.5",
+    "@types/jsdom-global": "^3.0.2",
     "@types/react": "^16.9.35",
     "@types/superagent": "^4.1.7",
     "babel-loader": "^8.1.0",
+    "chai": "^4.2.0",
     "cross-env": "^7.0.2",
+    "cucumber": "^6.0.5",
+    "jsdom-global": "^3.0.2",
     "node-libs-browser": "^2.2.1",
     "np": "^6.2.3",
     "npm-run-all": "^4.1.5",
@@ -54,7 +62,7 @@
     "react-url-query": "^1.5.0",
     "serve": "^11.3.0",
     "ts-loader": "^7.0.4",
-    "ts-node": "^8.10.1",
+    "ts-node": "^8.10.2",
     "typedoc": "^0.17.7",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
