LV: Work in progress for cookie testing

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/chai": "^4.2.11",
     "@types/cucumber": "^6.0.1",
     "@types/debug": "4.1.5",
+    "@types/js-cookie": "^2.2.6",
     "@types/jsdom-global": "^3.0.2",
     "@types/react": "^16.9.35",
     "@types/superagent": "^4.1.7",
@@ -51,11 +52,13 @@
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
     "cucumber": "^6.0.5",
+    "js-cookie": "^2.2.1",
     "jsdom-global": "^3.0.2",
     "node-libs-browser": "^2.2.1",
     "np": "^6.2.3",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
+    "playwright": "^1.0.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
