--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react": "^16.9.35",
     "@types/superagent": "^4.1.7",
     "babel-loader": "^8.1.0",
+    "base64-url": "^2.3.3",
     "chai": "^4.2.0",
     "cross-env": "^7.0.2",
     "cucumber": "^6.0.5",
