--- a/package.json
+++ b/package.json
@@ -75,9 +75,11 @@
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
+    "@types/express": "^4.17.6",
     "debug": "^3.2.6",
     "eventbusjs": "^0.2.0",
     "express": "^4.17.1",
+    "http-shutdown": "^1.2.2",
     "superagent": "^5.2.2"
   },
   "browserslist": "> 0.25%, not dead"
