--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build": "webpack",
     "build:production": "cross-env NODE_ENV=production webpack",
     "test": "cucumber-js",
+    "test:webkit": "BROWSER=webkit cucumber-js",
     "build:docs": "typedoc --out docs/ src/ ",
     "deploy": "np --no-cleanup",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
