--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build:production": "cross-env NODE_ENV=production webpack",
     "test": "cucumber-js",
     "test:webkit": "BROWSER=webkit cucumber-js",
+    "test:firefox": "BROWSER=firefox cucumber-js",
     "build:docs": "typedoc --out docs/ src/ ",
     "deploy": "np --no-cleanup",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
