CA: Cross-env for environment variable

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "build": "webpack",
     "build:production": "cross-env NODE_ENV=production webpack",
     "test": "cucumber-js",
-    "test:webkit": "BROWSER=webkit cucumber-js",
-    "test:firefox": "BROWSER=firefox cucumber-js",
+    "test:webkit": "cross-env BROWSER=webkit cucumber-js",
+    "test:firefox": "cross-env BROWSER=firefox cucumber-js",
     "build:docs": "typedoc --out docs/ src/ ",
     "deploy": "np --no-cleanup",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
