--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "strictNullChecks": true,
     "module": "es6",
     "target": "es6",
-    "lib": ["dom", "es5", "scripthost", "es2015"]
+    "lib": ["dom", "es5", "scripthost", "es2015"],
+    "moduleResolution": "node"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"],
