--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "static": "serve dist",
     "parcel": "cd demo && parcel index.html",
     "parcel:build": "cd demo && parcel build index.html",
-    "parcel:deploy": "surge demo/dist -d squathjs-demo-qa.surge.sh"
+    "parcel:deploy": "surge demo/dist -d squathjs-demo.surge.sh"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
