--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "test:firefox": "cross-env BROWSER=firefox cucumber-js",
     "test:types": "tsd",
     "test": "run-s test:types test:browser",
-    "build:docs": "typedoc --entryPointStrategy expand --out docs/ src/ ",
+    "build:docs": "typedoc --out docs/ src/ ",
     "deploy": "np --no-cleanup",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
     "preversion": "run-s build",
@@ -75,7 +75,7 @@
     "npm-run-all": "^4.1.5",
     "parcel": "^1.12.3",
     "parcel-bundler": "^1.12.4",
-    "playwright": "^1.0.2",
+    "playwright": "^1.28.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
