--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.4.3",
   "description": "The official Referral SaaSquatch Javascript Web/Browser SDK https://docs.referralsaasquatch.com/developer/squatchjs/",
   "license": "MIT",
-  "author": "Referral SaaSquatch Inc.",
+  "author": "ReferralSaaSquatch.com, Inc.",
   "types": "dist/squatch.d.ts",
   "source": "src/squatch.ts",
   "main": "dist/squatch.js",
