--- a/package.json
+++ b/package.json
@@ -95,8 +95,7 @@
   "dependencies": {
     "debug": "^3.2.6",
     "eventbusjs": "^0.2.0",
-    "js-cookie": "^2.2.1",
-    "superagent": "^5.2.2"
+    "js-cookie": "^2.2.1"
   },
   "browserslist": "> 0.25%, not dead",
   "msw": {
