--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.16",
     "@babel/runtime-corejs2": "^7.14.0",
+    "@size-limit/preset-small-lib": "^8.2.4",
     "@types/chai": "^4.2.11",
     "@types/cucumber": "^6.0.1",
     "@types/debug": "4.1.5",
@@ -82,6 +83,7 @@
     "react-dom": "^16.13.1",
     "react-url-query": "^1.5.0",
     "serve": "^11.3.0",
+    "size-limit": "^8.2.4",
     "ts-loader": "^7.0.4",
     "ts-node": "^8.10.2",
     "tsd": "^0.13.1",
@@ -100,5 +102,11 @@
   "browserslist": "> 0.25%, not dead",
   "msw": {
     "workerDirectory": "demo/dist"
-  }
+  },
+  "size-limit": [
+    {
+      "path": "dist/squatch.js",
+      "limit": "10 kB"
+    }
+  ]
 }
