CA: Jest test environment config setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "dist",
-    "sourceMap": false,
+    "sourceMap": true,
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
     "module": "ESNext",
     "target": "ESNext",
-    "lib": ["dom", "es5", "scripthost", "es2015"],
+    "lib": ["dom", "es5", "scripthost", "es2016"],
     "moduleResolution": "node"
   },
   "include": ["src/**/*.ts"],
