--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "test:webkit": "cross-env BROWSER=webkit cucumber-js",
     "test:firefox": "cross-env BROWSER=firefox cucumber-js",
     "test:types": "tsd",
-    "test": "run-s test:types test:browser",
+    "test:features": "jest",
+    "test": "jest",
     "build:docs": "typedoc --out docs/ src/ ",
     "deploy": "np --no-cleanup",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
@@ -55,22 +56,27 @@
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.16",
     "@babel/runtime-corejs2": "^7.14.0",
+    "@open-wc/testing-helpers": "^2.3.0",
     "@size-limit/preset-small-lib": "^8.2.4",
-    "@types/chai": "^4.2.11",
+    "@types/chai": "^4.3.5",
     "@types/cucumber": "^6.0.1",
     "@types/debug": "4.1.5",
     "@types/express": "^4.17.6",
+    "@types/jest": "^29.5.2",
     "@types/js-cookie": "^2.2.6",
     "@types/jsdom-global": "^3.0.2",
     "@types/react": "^16.9.35",
     "@types/superagent": "^4.1.7",
     "@ungap/url-search-params": "^0.2.0",
+    "babel-jest": "^29.5.0",
     "babel-loader": "^8.2.2",
     "base64-url": "^2.3.3",
-    "chai": "^4.2.0",
+    "chai": "^4.3.7",
     "cross-env": "^7.0.2",
     "cucumber": "^6.0.5",
     "express": "^4.17.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "microbundle": "^0.13.0",
     "msw": "^0.36.0",
     "np": "^6.2.3",
@@ -84,11 +90,12 @@
     "react-url-query": "^1.5.0",
     "serve": "^11.3.0",
     "size-limit": "^8.2.4",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^7.0.4",
     "ts-node": "^8.10.2",
     "tsd": "^0.13.1",
     "typedoc": "^0.17.7",
-    "typescript": "^3.9.3",
+    "typescript": "^5.1.6",
     "webpack": "^5.88.0",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.4",
@@ -106,7 +113,7 @@
   "size-limit": [
     {
       "path": "dist/squatch.js",
-      "limit": "10 kB"
+      "limit": "12 kB"
     }
   ]
 }
