--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.16",
     "@babel/runtime-corejs2": "^7.14.0",
+    "@happy-dom/jest-environment": "^9.20.3",
     "@open-wc/testing-helpers": "^2.3.0",
     "@size-limit/preset-small-lib": "^8.2.4",
+    "@testing-library/dom": "^9.3.1",
     "@types/chai": "^4.3.5",
     "@types/cucumber": "^6.0.1",
     "@types/debug": "4.1.5",
@@ -78,7 +80,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "microbundle": "^0.13.0",
-    "msw": "^0.36.0",
+    "msw": "^0.36.8",
     "np": "^6.2.3",
     "npm-run-all": "^4.1.5",
     "parcel": "^1.12.3",
@@ -89,6 +91,7 @@
     "react-dom": "^16.13.1",
     "react-url-query": "^1.5.0",
     "serve": "^11.3.0",
+    "shadow-dom-testing-library": "^1.11.0",
     "size-limit": "^8.2.4",
     "ts-jest": "^29.1.1",
     "ts-loader": "^7.0.4",
