--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "test:webkit": "cross-env BROWSER=webkit cucumber-js",
     "test:firefox": "cross-env BROWSER=firefox cucumber-js",
     "test:types": "tsd",
-    "test:features": "jest",
-    "test": "jest",
+    "test:features": "jest --verbose --coverage",
+    "test": "run-s test:features test:browser test:webkit test:firefox",
     "build:docs": "typedoc --out docs/ src/ ",
     "deploy": "np --no-cleanup",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
@@ -78,6 +78,7 @@
     "cucumber": "^6.0.5",
     "express": "^4.17.1",
     "jest": "^29.5.0",
+    "jest-cucumber": "^3.0.1",
     "jest-environment-jsdom": "^29.5.0",
     "microbundle": "^0.13.0",
     "msw": "^0.36.8",
