--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "test:types": "tsd",
     "test:features": "jest --verbose --coverage",
     "test": "run-s test:features test:browser test:webkit test:firefox",
-    "build:docs": "typedoc --out docs/ src/ ",
+    "build:docs": "typedoc",
     "deploy": "np --no-cleanup",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
     "preversion": "run-s build",
@@ -63,12 +63,13 @@
     "@types/chai": "^4.3.5",
     "@types/cucumber": "^6.0.1",
     "@types/debug": "4.1.5",
+    "@types/estree": "^1.0.1",
     "@types/express": "^4.17.6",
+    "@types/inquirer": "^9.0.3",
     "@types/jest": "^29.5.2",
     "@types/js-cookie": "^2.2.6",
     "@types/jsdom-global": "^3.0.2",
     "@types/react": "^16.9.35",
-    "@types/superagent": "^4.1.7",
     "@ungap/url-search-params": "^0.2.0",
     "babel-jest": "^29.5.0",
     "babel-loader": "^8.2.2",
@@ -98,7 +99,7 @@
     "ts-loader": "^7.0.4",
     "ts-node": "^8.10.2",
     "tsd": "^0.13.1",
-    "typedoc": "^0.17.7",
+    "typedoc": "^0.24.8",
     "typescript": "^5.1.6",
     "webpack": "^5.88.0",
     "webpack-bundle-analyzer": "^4.9.0",
