--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -30,16 +30,40 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
+        id: checkout
         uses: actions/checkout@v3
+
       - name: Setup Pages
+        id: setup-pages
         uses: actions/configure-pages@v3
+
+      - name: Setup NodeJS
+        id: setup-node
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: package.json
+          cache: "npm"
+
+      - name: NPM Install
+        id: npm-ci
+        run: npm ci
+
+      - name: Build Docs
+        id: build-docs
+        run: npm run build:docs
+
       - name: Upload artifact
+        id: upload-docs
         uses: actions/upload-pages-artifact@v2
         with:
           # Upload entire repository
-          path: 'docs'
+          path: "./docs"
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+        with:
+          preview: "true"
