ci: fix GITHUB_TOKEN permissions settings

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -13,8 +13,8 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
-  pages: write
+  # Write permissions are needed to push the built site to the gh-pages branch
+  contents: write
   id-token: write
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
