fixed base64 decoding of special language characters

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "babel-jest": "^29.5.0",
     "babel-loader": "^8.2.2",
     "base64-url": "^2.3.3",
+    "base-64": "^1.0.0",
     "chai": "^4.3.7",
     "cross-env": "^7.0.2",
     "cucumber": "^6.0.5",
@@ -100,6 +101,7 @@
     "tsd": "^0.13.1",
     "typedoc": "^0.24.8",
     "typescript": "^5.1.6",
+    "utf8": "^3.0.0",
     "webpack": "^5.88.0",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^5.1.4",
