--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saasquatch/squatch-js",
-  "version": "2.6.2",
+  "version": "2.6.3-1",
   "description": "The official Referral SaaSquatch Javascript Web/Browser SDK https://docs.referralsaasquatch.com/developer/squatchjs/",
   "license": "MIT",
   "author": "ReferralSaaSquatch.com, Inc.",
@@ -119,7 +119,7 @@
   "size-limit": [
     {
       "path": "dist/squatch.js",
-      "limit": "12.5 kB"
+      "limit": "14 kB"
     }
   ]
 }
