b64decode tests, working fix for decodin and hygiene

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@saasquatch/squatch-js",
-  "version": "2.6.3-1",
+  "version": "2.6.3",
   "description": "The official Referral SaaSquatch Javascript Web/Browser SDK https://docs.referralsaasquatch.com/developer/squatchjs/",
   "license": "MIT",
   "author": "ReferralSaaSquatch.com, Inc.",
@@ -36,7 +36,8 @@
     "test:firefox": "cross-env BROWSER=firefox cucumber-js",
     "test:types": "tsd",
     "test:features": "jest --verbose --coverage",
-    "test": "run-s test:features test:browser test:webkit test:firefox",
+    "test:unicode": "jest --verbose --coverage -t 'Test all UTF-8 characters in different languages'",
+    "test": "run-s test:features -- b64",
     "build:docs": "typedoc",
     "deploy": "np --no-cleanup",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
