--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "test:firefox": "cross-env BROWSER=firefox cucumber-js",
     "test:types": "tsd",
     "test:features": "jest --verbose --coverage",
-    "test:unicode": "jest --verbose --coverage -t 'Test all UTF-8 characters in different languages'",
-    "test": "run-s test:features -- b64",
+    "test:utf8": "jest --verbose --coverage -t 'Test all UTF-8 characters in different languages'",
+    "test": "run-s test:features test:browser test:webkit test:firefox",
     "build:docs": "typedoc",
     "deploy": "np --no-cleanup",
     "deploy:docs": "surge ./ -d squathjsv2.surge.sh",
