--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@saasquatch/squatch-js",
   "type": "module",
-  "version": "2.7.0-1",
+  "version": "2.7.0-2",
   "description": "The official Referral SaaSquatch Javascript Web/Browser SDK https://docs.referralsaasquatch.com/developer/squatchjs/",
   "license": "MIT",
   "author": "ReferralSaaSquatch.com, Inc.",
@@ -101,6 +101,7 @@
     "tsd": "^0.13.1",
     "typedoc": "^0.24.8",
     "typescript": "^5.1.6",
+    "vite-plugin-dts": "^4.5.3",
     "webpack-bundle-analyzer": "^4.9.0",
     "webpack-cli": "^6.0.1",
     "webpack-visualizer-plugin": "^0.1.11"
