--- a/package.json
+++ b/package.json
@@ -101,10 +101,9 @@
     "tsd": "^0.13.1",
     "typedoc": "^0.24.8",
     "typescript": "^5.1.6",
+    "vite": "^6.2.4",
     "vite-plugin-dts": "^4.5.3",
-    "webpack-bundle-analyzer": "^4.9.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "prettier": {},
   "dependencies": {
