--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@types/jsdom-global": "^3.0.2",
     "@types/react": "^16.9.35",
     "@ungap/url-search-params": "^0.2.0",
+    "ajv": "^8.17.1",
     "babel-jest": "^29.5.0",
     "babel-loader": "^8.2.2",
     "base64-url": "^2.3.3",
@@ -97,7 +98,7 @@
     "serve": "^11.3.0",
     "size-limit": "^8.2.4",
     "terser": "^5.39.1",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.3.3",
     "ts-loader": "^7.0.4",
     "ts-node": "^8.10.2",
     "tsd": "^0.13.1",
